methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:4: error: not found: value getcouleur
  getcouleur();
  ^SlugTracking:5: error: not found: value color
  while (color.green) {
         ^SlugTracking:7: error: not found: value color
    if (color.green==false) {
        ^SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
  while (color.green) {
  ^