methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  avance();
  getcouleur();
  while (color.green) {
    avance();
    if (color.green==false) {
      recule();
      gauche();
    }
  }
  
}